[tool.poetry]
name = "test-ref-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.2"}
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.6.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
